--- a/app/templates/sqlitesample.html
+++ b/app/templates/sqlitesample.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-{% block title %}サンプル{% endblock %}
+{% block title %}SQLiteサンプル{% endblock %}
 {% block content %}
   <h1>{{page_name}}</h1>
   <p>{{time}}</p>
+  <p>{{result | safe}}</p>
 {% endblock %}
