--- a/app/quiz/templates/edit.html
+++ b/app/quiz/templates/edit.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{title}}{% endblock %}
 {% block content %}
-  {% if error %}
-    <p>{{ error }}</p>
+  {% if info %}
+    <p>{{ info }}</p>
   {% endif %}
   <h1>{{title}}</h1>
   <form action="{{ url_for('edit') }}" method="POST">
