--- a/app/blog/templates/logout.html
+++ b/app/blog/templates/logout.html
@@ -5,6 +5,5 @@
 
 {% block content %}
   <p>{{ username }} - ログアウトしました。</p>
-  <p><a href="{{ url_for('login') }}">ログイン</a>
-  <a href="{{ url_for('signup') }}" style="margin-left: 20px;">ユーザー登録</a></p>
+  <p><a href="{{ url_for('login') }}">ログイン</a></p>
 {% endblock %}
