--- a/app/todo/templates/index.html
+++ b/app/todo/templates/index.html
@@ -5,7 +5,7 @@ ToDoアプリ
 {% block content %}
   <h1>ToDo - {{ username }}</h1>
   <form method="post">
-    <textarea name="task" rows="4" cols="30" placeholder="タスク追加"></textarea><br>
+    <textarea name="task" rows="4" cols="30" placeholder="タスク追加" required></textarea><br>
     <button type="submit" name="add">追加</button>
   </form>
   <br>
