--- a/app/blog/templates/admin.html
+++ b/app/blog/templates/admin.html
@@ -25,5 +25,5 @@
   <p>記事がありません。</p>
 {% endif %}
 <p><a href="{{ url_for('logout') }}">ログアウト</a>
-<a href="{{ url_for('leave') }}" style="margin-left: 20px;">ユーザー登録解除</a></p>
+<a href="{{ url_for('leave') }}" style="margin-left: 20px;">管理者登録解除</a></p>
 {% endblock %}
