--- a/app/blog/templates/leave.html
+++ b/app/blog/templates/leave.html
@@ -4,6 +4,6 @@
 {% endblock %}
 
 {% block content %}
-  <p>{{ username }}のユーザー登録を解除しました。</p>
-  <p><a href="{{ url_for('signup') }}">ユーザー登録</a></p>
+  <p>{{ username }}の管理者登録を解除しました。</p>
+  <p><a href="{{ url_for('signup') }}">管理者登録</a></p>
 {% endblock %}
