--- a/app/survey/templates/admin.html
+++ b/app/survey/templates/admin.html
@@ -47,5 +47,5 @@
   <button type="submit" name="alldel" style="margin-left:20px;">全て削除</button></p>
 </form>
 <p><a href="{{ url_for('logout') }}">ログアウト</a>
-<a href="{{ url_for('leave') }}" style="margin-left: 20px;">ユーザー登録解除</a></p>
+<a href="{{ url_for('leave') }}" style="margin-left: 20px;">管理者登録解除</a></p>
 {% endblock %}
