--- a/app/survey/templates/leave.html
+++ b/app/survey/templates/leave.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-  <p>{{ username }}のユーザー登録を解除しました。</p>
+  <p>{{ username }}の管理者登録を解除しました。</p>
   <p><a href="{{ url_for('login') }}">ログイン</a>
-  <a href="{{ url_for('signup') }}" style="margin-left: 20px;">ユーザー登録</a></p>
+  <a href="{{ url_for('signup') }}" style="margin-left: 20px;">管理者登録</a></p>
 {% endblock %}
