--- a/app/survey/templates/signup.html
+++ b/app/survey/templates/signup.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-<h2>ユーザー登録</h2>
+<h2>管理者登録</h2>
 {% if exist %}
   <p>{{exist}}</p>
 {% else %}
@@ -12,7 +12,7 @@
     <p>{{ error }}</p>
   {% endif %}
   <form action="{{ url_for('signup') }}" method="POST">
-    ユーザー名：<input type="text" name="username" required><br>
+    管理者名：<input type="text" name="username" required><br>
     パスワード：<input type="password" name="password" required><br>
     <button type="submit">登録</button>
   </form>
