--- a/app/survey/templates/admin.html
+++ b/app/survey/templates/admin.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <h1>回答一覧</h1>
-<table class="anstbl">
+<table class="anstbl" border="1">
   <tr>
     <th class="ansth">回答日時</th>
     <th class="ansth">名前</th>
